--- a/assets/sdfdsfsdf/style.css
+++ b/assets/sdfdsfsdf/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?2biz12');
-  src:  url('fonts/icomoon.eot?2biz12#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?2biz12') format('truetype'),
-    url('fonts/icomoon.woff?2biz12') format('woff'),
-    url('fonts/icomoon.svg?2biz12#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?l3odq8');
+  src:  url('fonts/icomoon.eot?l3odq8#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?l3odq8') format('truetype'),
+    url('fonts/icomoon.woff?l3odq8') format('woff'),
+    url('fonts/icomoon.svg?l3odq8#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,9 +25,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-arrow-up:before {
-  content: "\e90c";
-}
 .icon-phone:before {
   content: "\e900";
 }
