--- a/style.css
+++ b/style.css
@@ -216,6 +216,9 @@ nav.show ul.grid {
     color: var(--base-color);
 }
 
+.logo-alt span {
+    color: var(--body-color);
+}
 
 .container {
     margin-left: 1.5rem;
@@ -446,4 +449,58 @@ nav.show ul.grid {
 
 #contact ul li i {
     color: var(--base-color);
+}
+
+/* FOOTER */
+
+footer {
+    background: var(--base-color);
+}
+
+footer .logo {
+    display: inline-block;
+    margin-bottom: 1.5rem;
+}
+
+footer .brand p {
+    color: var(--text-color-light);
+    margin-bottom: 0.75rem;
+}
+
+footer i {
+    font-size: 1.5rem;
+    color: var(--text-color-light);
+}
+
+footer .social a {
+    margin-right: 2rem;
+    display: inline-block;
+    transition: 0.3s;
+}
+
+footer .social a:hover {
+    transform: translateY(-8px);
+}
+
+/* Arrow-UP */
+
+.back-to-top {
+    background: var(--base-color);
+    color: --text-color-light;
+
+    position: fixed;
+    right: 1rem;
+    bottom: 1rem;
+
+    padding: 0.5rem;
+    clip-path: circle();
+    line-height: 0;
+
+    visibility: hidden;
+    opacity: 0;
+}
+
+.back-to-top.show {
+    visibility: visible;
+    opacity: 1;
 }
